tests/neg-custom-args/captures/capless-strawman4.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capless-strawman4.scala:10:45 ----------------------------
10 |    def run(): Unit = ops.foreach(op => op())  // error
   |                                             ^
   |                                             Found:    Runner^{ops*}
   |                                             Required: Runner
   |
   |                                             Note that capability ops* is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capless-strawman4.scala:13:26 ----------------------------
13 |    def run(): Unit = op()  // error
   |                          ^
   |                          Found:    Runner^{op}
   |                          Required: Runner
   |
   |                          Note that capability op is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
